<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/student_id"/>
            <EditText
                android:id="@+id/editTextStudentId"
                android:inputType="text"
                android:hint="@string/student_id"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/student_name"/>
            <EditText
                android:id="@+id/ediTextStudentName"
                android:inputType="text"
                android:hint="@string/hint_student_name"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/mac_address"/>
            <EditText
                android:id="@+id/editTextMacAddress"
                android:inputType="text"
                android:hint="@string/hint_mac_address"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:onClick="OnClickSave"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:onClick="OnClickCancel"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>